--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,12 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "next": "^16.0.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
+    "@repo/eslint": "*",
     "@repo/typescript": "*",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
