--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,13 +6,15 @@
   },
   "dependencies": {
     "@repo/constants": "workspace:*",
-    "hono": "^4.10.8",
-    "bun": "^1.3.4"
+    "bun": "latest",
+    "hono": "^4.10.8"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/node": "^20.11.17",
-    "@types/bun": "^1.3.4",
-    "tsx": "^4.7.1",
+    "@repo/prettier": "workspace:*",
+    "@types/bun": "latest",
     "typescript": "^5.8.3"
-  }
+  },
+  "prettier": "@repo/prettier/base"
 }
