--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -19,9 +19,12 @@
     "dev": "tsc -p tsconfig.build.json --watch"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@repo/prettier": "workspace:*",
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
-  }
+  },
+  "prettier": "@repo/prettier/base"
 }
