--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -10,7 +10,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@next/eslint-plugin-next": "^15.5.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@next/eslint-plugin-next": "^16.0.8",
+    "@repo/prettier": "workspace:*",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-only-warn": "^1.1.0",
@@ -20,5 +22,6 @@
     "globals": "^16.5.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.48.1"
-  }
+  },
+  "prettier": "@repo/prettier/base"
 }
