--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,7 +2,8 @@
   "name": "@repo/server",
   "type": "module",
   "scripts": {
-    "dev": "bun run --bun --port=3001 --hot src/index.ts"
+    "dev": "bun run --bun --port=3001 --hot src/index.ts",
+    "format": "prettier --check . --ignore-path ../../.gitignore"
   },
   "dependencies": {
     "@repo/constants": "workspace:*",
@@ -12,10 +13,10 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@repo/eslint": "workspace:*",
-    "@types/node": "^22",
     "@repo/prettier": "workspace:*",
     "@types/bun": "latest",
-    "typescript": "^5.9.2"
+    "@types/node": "^22",
+    "typescript": "5.9.2"
   },
   "prettier": "@repo/prettier/base"
 }
