--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
     "start": "next start",
     "lint": "eslint"
   },
@@ -25,7 +26,7 @@
     "@types/react-dom": "^19",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4",
-    "typescript": "^5.9.2"
+    "typescript": "5.9.2"
   },
   "prettier": "@repo/prettier/next"
 }
