--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "clean": "git clean -xdf node_modules",
+    "clean:workspaces": "turbo run clean",
     "dev": "turbo run dev",
+    "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
+    "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "lint:fix": "turbo run lint --continue -- --fix --cache --cache-location .cache/.eslintcache",
+    "lint:ws": "bunx --bun sherif@latest",
+    "lint:wsfix": "bunx --bun sherif@latest --fix",
+    "postinstall": "bun run --bun turbo/scripts/postinstall.mjs",
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "eslint": "^9.39.1",
