--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
     "dev": "tsc -p tsconfig.build.json --watch"
   },
   "devDependencies": {
