--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -8,6 +8,9 @@
     "./next-js": "./next.js",
     "./react-internal": "./react-internal.js"
   },
+  "scripts": {
+    "format": "prettier --check . --ignore-path ../../.gitignore"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
@@ -20,7 +23,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-turbo": "^2.6.3",
     "globals": "^16.5.0",
-    "typescript": "^5.9.2",
+    "typescript": "5.9.2",
     "typescript-eslint": "^8.49.0"
   },
   "prettier": "@repo/prettier/base"
