--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@repo/api": "workspace:*",
     "@repo/eslint": "workspace:*",
     "@repo/prettier": "workspace:*",
     "@tailwindcss/postcss": "^4",
