--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@hono/trpc-server": "^0.4.1",
-    "@repo/api": "workspace:*",
+    "@repo/validators": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
+    "@trpc/client": "^11.7.2",
+    "@trpc/server": "^11.7.2",
+    "better-auth": "^1.4.6",
     "bun": "latest",
     "hono": "^4.10.8",
+    "mongodb": "^^7.0.0",
+    "superjson": "^2.2.6",
     "zod": "^4.1.13"
   },
   "devDependencies": {
