--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hono/trpc-server": "^0.4.1",
+    "@repo/api": "workspace:*",
     "@repo/validators": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "@trpc/client": "^11.7.2",
