--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,17 +1,8 @@
 {
   "name": "@repo/server",
   "type": "module",
-  "scripts": {
-    "dev": "bun run --bun --env-file=../../.env --port=3001 --hot src/index.ts",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint --flag unstable_native_nodejs_ts_config",
-    "start": "bun run src/index.ts",
-    "typecheck": "tsc --noEmit"
-  },
   "dependencies": {
     "@hono/trpc-server": "^0.4.1",
-    "@repo/api": "workspace:*",
-    "@repo/validators": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "@trpc/client": "^11.7.2",
     "@trpc/server": "^11.7.2",
@@ -23,12 +14,8 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@repo/eslint": "workspace:*",
-    "@repo/prettier": "workspace:*",
-    "@types/bun": "latest",
     "@types/node": "^22",
+    "tsx": "^4.7.1",
     "typescript": "5.9.2"
-  },
-  "prettier": "@repo/prettier/base"
+  }
 }
