--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,33 +1,20 @@
 {
   "compilerOptions": {
-    /* ----------- Bun-friendly output ------------ */
     "target": "ES2022",
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true, // Bun requires this
-
-    /* --------------- Strictness ----------------- */
     "strict": true,
     "skipLibCheck": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noUncheckedIndexedAccess": true,
-
-    /* -------------- Interop & Module ------------ */
+    "types": ["node"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
+    "outDir": "./dist",
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true, // Bun requires this
     "esModuleInterop": true,
-    "moduleDetection": "force",
-
-    /* --------------- Path Aliases --------------- */
+    "moduleResolution": "bundler",
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    },
-
-    /* --------------- Emit ----------------------- */
-    "noEmit": true // Bun handles transpilation
+    "noEmit": true
   },
-
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
