--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,18 +4,12 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
+    ".": "./src/index.ts"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "dev": "tsc -p tsconfig.build.json --watch",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
