--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,7 @@
       "outputs": [".cache/tsbuildinfo.json"]
     }
   },
-  "globalEnv": [],
+  "globalEnv": ["NEXT_PUBLIC_API_URL"],
   "globalPassThroughEnv": [
     "NODE_ENV",
     "CI",
