--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,19 +1,12 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "@repo/typescript/base.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ESNext",
-    "strict": true,
-    "skipLibCheck": true,
-    "types": ["node"],
+    "types": ["node", "bun"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "outDir": "./dist",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true, // Bun requires this
-    "esModuleInterop": true,
-    "moduleResolution": "bundler",
-    "baseUrl": ".",
-    "noEmit": true
+    "baseUrl": "."
   },
   "include": ["src"],
   "exclude": ["node_modules"]
