--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,6 +24,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@repo/eslint": "workspace:*",
     "@repo/prettier": "workspace:*",
+    "@repo/typescript": "workspace:*",
     "@types/bun": "latest",
     "@types/node": "^22",
     "tsx": "^4.7.1",
