--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript/base.json",
-  "include": ["src", "exportupdate.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
