--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
     "@t3-oss/env-core": "^0.13.8",
     "@trpc/client": "^11.7.2",
     "@trpc/server": "^11.7.2",
+    "algoliasearch": "^5.46.0",
     "better-auth": "^1.4.6",
     "bun": "latest",
     "hono": "^4.10.8",
