--- a/turbo.json
+++ b/turbo.json
@@ -45,6 +45,8 @@
     "S3_ACCESS_KEY_ID",
     "S3_SECRET_ACCESS_KEY",
     "S3_REGION",
-    "S3_BUCKET"
+    "S3_BUCKET",
+    "ALGOLIA_APP_ID",
+    "ALGOLIA_API_KEY"
   ]
 }
