--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,14 +11,9 @@
     "@hono/trpc-server": "^0.4.1",
     "@repo/api": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
-    "@trpc/client": "^11.7.2",
-    "@trpc/server": "^11.7.2",
-    "algoliasearch": "^5.46.0",
-    "better-auth": "^1.4.6",
-    "bun": "latest",
+    "bun": "1.3.3",
     "hono": "^4.10.8",
     "mongodb": "^^7.0.0",
-    "superjson": "^2.2.6",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -26,7 +21,7 @@
     "@repo/eslint": "workspace:*",
     "@repo/prettier": "workspace:*",
     "@repo/typescript": "workspace:*",
-    "@types/bun": "latest",
+    "@types/bun": "1.3.3",
     "@types/node": "^22",
     "tsx": "^4.7.1",
     "typescript": "5.9.2"
