--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,12 +13,11 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/query-core": "^5.90.12",
     "@tanstack/react-query": "^5.90.12",
     "@trpc/client": "^11.7.2",
     "@trpc/react-query": "^11.7.2",
     "better-auth": "^1.4.6",
-    "bun": "latest",
+    "bun": "1.3.3",
     "next": "16.0.10",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -34,7 +33,7 @@
     "@repo/typescript": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@types/bun": "latest",
+    "@types/bun": "1.3.3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
