--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,25 +23,24 @@
     "typegen": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
-    "@repo/validators": "workspace:*"
+    "@repo/validators": "workspace:*",
+    "@trpc/server": "^11.7.2",
+    "better-auth": "^1.4.6",
+    "superjson": "^2.2.6"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@repo/eslint": "workspace:*",
     "@repo/prettier": "workspace:*",
     "@repo/typescript": "workspace:*",
-    "@types/bun": "latest",
+    "@types/bun": "1.3.3",
     "@types/lodash-es": "^4.17.12",
     "typescript": "5.9.2"
   },
   "peerDependencies": {
     "@t3-oss/env-core": "^0.13.8",
-    "@trpc/client": "^11.7.2",
-    "@trpc/server": "^11.7.2",
-    "better-auth": "^1.4.6",
-    "bun": "latest",
+    "bun": "1.3.3",
     "mongodb": "^^7.0.0",
-    "superjson": "^2.2.6",
     "zod": "^4.1.13"
   },
   "prettier": "@repo/prettier/base"
