--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@trpc/client": "^11.7.2",
     "@trpc/react-query": "^11.7.2",
+    "algoliasearch": "^5.46.0",
     "better-auth": "^1.4.6",
     "bun": "1.3.3",
     "next": "16.0.10",
