issue:server:algolia:update example env

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,14 @@
-# Since .env is gitignored, you can use .env.example to build a new `.env` file when you clone the repo.
-# Keep this file up-to-date when you add new variables to \`.env\`.
+MONGODB_URI="mongodb+srv://algoliatemp:tVp6p7JZytpSHN89@cluster0.wfehl51.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+CLOUDFLARE_TURNSTILE_SECRET_KEY="0x4AAAAAA00000000000000000000000000"
+SERVER_TOKEN="somekeysareuseless"
+BETTER_AUTH_SECRET="thissecretisntareadlsecret"
+BETTER_AUTH_URL="https://localhost:3000"
+S3_ACCESS_KEY_ID="your_access_key_id"
+S3_SECRET_ACCESS_KEY="your_secret_access_key"
+S3_REGION="us-east-1"
+S3_BUCKET="my-unique-bucket-name"
+NEXT_PUBLIC_API_URL="http://localhost:3006"
 
-# This file will be committed to version control, so make sure not to have any secrets in it.
-# If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
-
-# The database URL is used to connect to your Supabase database.
-POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?workaround=supabase-pooler.vercel"
-
-
-# You can generate the secret via 'openssl rand -base64 32' on Unix
-# @see https://www.better-auth.com/docs/installation
-AUTH_SECRET='supersecret'
-
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://www.better-auth.com/docs/authentication/discord
-AUTH_DISCORD_ID=''
-AUTH_DISCORD_SECRET=''
+# Algolia
+ALGOLIA_APP_ID="YOURCHOICE"
+ALGOLIA_API_KEY="your_secret_access_key"
